# Monte-Carlo-Options-Simulator

./: CMakeLists.txt  README.md  requirements.txt
backend/: main.cpp
backend/include/: monteCarlo.h
backend/src/: main.cpp  monteCarlo.cpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: App.js
